@@ -221,11 +221,14 @@ abstract class KNXCommand implements Command
    * Destination address for this command.
    */
   private GroupAddress address;
+  
+
+  // Protected Instance Fields ----------------------------------------------------------------------
 
   /**
    * Connection manager to be used to transmit this command.
    */
-  private KNXIpConnectionManager connectionManager;
+  protected KNXIpConnectionManager connectionManager;
 
 
 
@@ -328,32 +331,22 @@ abstract class KNXCommand implements Command
 
 
   /**
-   * Relay a read command to an open KNX/IP connection.
-   *
-   * TODO : call semantics on return value 
-   *
-   * @param command   KNX read command
-   *
-   * @return  Returns the application protocol data unit (APDU) for a Group Value Read Response
-   *          frame. This frame contains the response value from the device. <P>
-   *
-   *          NOTE: may return <code>null</code> in case there's a connection exception or the
-   *          read response is not available from the device yet.
+   * Relay a read command to an open KNX/IP connection. 
+   * The value which is received after this read is handled by the KNXConnection which updates the sensor
+   * 
+   * @param command KNX read command
    */
-  ApplicationProtocolDataUnit read(GroupValueRead command)
+  void triggerRead(GroupValueRead command)
   {
     KNXConnection connection = connectionManager.getCurrentConnection();
 
     if (connection == null)
     {
        log.info("KNX connection not available.");
-
-       return null;
     }
-
     else
     {
-      return connection.read(command);
+      connection.read(command);
     }
   }
   
